tests/pass/global_decl_func_mix.tc
int a = 1;

int inc() {
  a = a + 1;
  return a;
}

int b = inc();

int main() {
  return a + b;
}
