tests/fail/duplicate_global.tc
int value = 1;
int value = 2;

int main() {
  return value;
}
